--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -119,7 +119,7 @@
 	</div>
 
 	<script src="{% static "template/js/app.js" %}"></script>
-    <script src="//cdn.datatables.net/2.2.2/js/dataTables.min.js"></script>
+	<script src="https://cdn.datatables.net/2.2.2/js/dataTables.min.js"></script>
 
 	<!-- Incluir SweetAlert2 desde CDN -->
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
