--- a/templates/courses/admin/admin_courses.html
+++ b/templates/courses/admin/admin_courses.html
@@ -6,11 +6,18 @@
 
 {% block content %}
 <div class="d-flex justify-content-between align-items-center">
-    <h1>Administrador de cursos</h1>
-    <a href="{% url 'visual_course_wizard' %}" class="btn btn-primary">
-        <i class="fa-solid fa-graduation-cap "></i> Crear curso
-    </a>
+    <h1 class="mb-0">Administrador de cursos</h1>
+    
+    <div class="ms-auto d-flex gap-2">
+        <a href="{% url 'course_summary' %}" class="btn btn-outline-secondary">
+            <i class="fa-solid fa-chart-line me-1"></i> Resumen
+        </a>
+        <a href="{% url 'visual_course_wizard' %}" class="btn btn-primary">
+            <i class="fa-solid fa-graduation-cap"></i> Crear curso
+        </a>
+    </div>
 </div>
+
     <div class="row">
         <div class="col-12">
             <div class="w-100">
