--- a/templates/forms_requests/user/request_form_user.html
+++ b/templates/forms_requests/user/request_form_user.html
@@ -2,7 +2,6 @@
 {% load static %}
 
 {% block page_title %}Solicitudes de constancias{% endblock %}
-{% block title %}Solicitudes de constancias{% endblock %}
 
 {% block styles %}
 <link rel="stylesheet" href="{% static 'css/forms.css' %}">
@@ -10,7 +9,7 @@
 
 {% block content %}
 <div class="container mt-4">
-    <h2>Formularios y Trámites</h2>
+    <h2>Solicitudes de constancias</h2>
 
     <!-- Barra de búsqueda -->
     <input type="text" class="form-control search-bar" placeholder="Buscar formulario...">
