el resumen se abre en otra pestaña

--- a/templates/courses/admin/admin_courses.html
+++ b/templates/courses/admin/admin_courses.html
@@ -9,7 +9,7 @@
     <h1 class="mb-0">Administrador de cursos</h1>
     
     <div class="ms-auto d-flex gap-2">
-        <a href="{% url 'course_summary' %}" class="btn btn-outline-secondary">
+        <a href="{% url 'course_summary' %}" target="_blank" class="btn btn-outline-secondary">
             <i class="fa-solid fa-chart-line me-1"></i> Resumen
         </a>
         <a href="{% url 'visual_course_wizard' %}" class="btn btn-primary">
