ya filtra las constancias

--- a/templates/authapp/home_user.html
+++ b/templates/authapp/home_user.html
@@ -84,8 +84,7 @@
     <div class="col-md-6">
       <h5>Comunicados</h5>
       <div class="notification-card">
-        <p><strong>{{ user.first_name }}</strong> | Hace 15 minutos</p>
-        <p>Estimado equipo,<br>En Recursos Humanos creemos que la evolución no es exclusiva de las especies...</p>
+        <p><strong>Notificación</strong><br>Descripción de la notificación.<br><small>Hoy 9:11 hrs</small></p>
       </div>
       <!-- Puedes repetir más comunicados -->
     </div>
@@ -94,7 +93,7 @@
     <div class="col-md-6">
       <h5>Últimas notificaciones</h5>
       <div class="notification-card">
-        <p><strong>Título de notificación</strong><br>Descripción de la notificación.<br><small>Hoy 9:11 hrs</small></p>
+        <p><strong>Notificación</strong><br>Descripción de la notificación.<br><small>Hoy 9:11 hrs</small></p>
       </div>
       <!-- Puedes repetir más notificaciones -->
     </div>
