--- a/templates/forms_requests/user/request_form_user.html
+++ b/templates/forms_requests/user/request_form_user.html
@@ -12,7 +12,7 @@
     <h2>Solicitudes de constancias</h2>
 
     <!-- Barra de búsqueda -->
-    <input type="text" class="form-control search-bar" placeholder="Buscar formulario...">
+    <input type="text" id="formSearch" class="form-control search-bar" placeholder="Buscar formulario...">
 
     <!-- Tabs -->
     <div class="tab-container mb-3">
